[package]
name = "permitit"
version = "0.1.0"
authors = [ "Toxikuu" ]
edition = "2024"
description = "Cute little library to permit a specific error"
repository = "https://github.com/Toxikuu/permit.git"
license = "GPL-3.0"
readme = "README.md"
categories = [ "rust-patterns" ]
keywords = [
    "error"
]
exclued = [
    ".github/"
]

[dev-dependencies]
anyhow = "1.0.97"
